# CPP_modules

./: CMakeLists.txt
GUI/: CMakeLists.txt
GUI/src/: cmainwindow.cpp  cmainwindow.h  cmainwindow.ui  gui_api.h
Modules/: CMakeLists.txt
Modules/src/: ModuleOne.ixx
ModulesTest/: CMakeLists.txt
ModulesTest/src/: Character.cpp  Character.ixx  Math.ixx  MathAlgebra.ixx  MathGeometry.ixx  Math_demo.ixx  ModuleOne.ixx  RandomTests.ixx
PassengerFlightUtils/: CMakeLists.txt
PassengerFlightUtils/src/: CPerson.ixx  IPerson.ixx  Person.ixx  PersonImpl.ixx  PersonInterface.ixx  RandomHeader.h  TicketPassengerCollection.ixx
PassengerFlightUtils/src/Entities/: CAirlineTicket.ixx  CDestination.ixx  CPassenger.ixx  CPassport.ixx
src/: main.cpp
